# Finance

./: README.md  app.py  commands.py  createtable.py  finance.db  post.py  pyproject.toml  req.txt  reqto.csv  reqtotoml.py  requirements.txt
templates/: index.html  layout.html
