[tool.poetry]
name = "ankfinance"
version = "0.1.0"
description = ""
authors = ["ankit rana <ankitranastun@gmail.com>"]
[tool.poetry.dependencies]
python = "^3.7"
Flask = "2.0.2"
asyncio="3.4.3"
atomicwrites="1.4.0"
attrs="20.3.0"
autopep8="1.6.0"
awscli="1.25.12"
backports.shutil-get-terminal-size="1.0.0"
backports.shutil_which="3.5.2"
beautifulsoup4="4.11.1"
braceexpand="0.1.7"
Brotli="1.0.9"
bs4="0.0.1"
cachelib="0.8.0"
certifi="2022.6.15"
cffi="1.15.0"
charset-normalizer="2.0.12"
check50="3.3.6"
click="8.1.3"
colorama="0.4.4"
compare50="1.2.6"
cryptography="37.0.2"
cs50="9.2.2"
cssselect2="0.6.0"
cycler="0.11.0"
distlib="0.3.4"
docutils="0.16"
EditorConfig="0.12.3"
filelock="3.7.1"
Flask="2.1.2"
Flask-CLI="0.4.0"
Flask-Session="0.4.0"
Flask-SQLAlchemy="2.5.1"
fonttools="4.33.3"
greenlet="1.1.2"
gunicorn="20.1.0"
html5lib="1.1"
icdiff="2.0.5"
idna="3.3"
iniconfig="1.1.1"
intervaltree="3.1.0"
itsdangerous="2.1.2"
jellyfish="0.9.0"
Jinja2="3.1.2"
jmespath="1.0.1"
jsbeautifier="1.14.3"
kiwisolver="1.4.3"
lib50="3.0.4"
lxml="4.9.0"
MarkupSafe="2.1.1"
matplotlib="3.5.2"
multitasking="0.0.11"
natsort="8.1.0"
numpy="1.22.4"
packaging="21.3"
pandas="1.4.3"
passlib="1.7.4"
pexpect="4.8.0"
Pillow="9.1.1"
platformdirs="2.5.2"
plotly="5.9.0"
pluggy="1.0.0"
psycopg2="2.9.3"
psycopg2-binary="2.9.3"
ptyprocess="0.7.0"
py="1.11.0"
pyasn1="0.4.8"
pycodestyle="2.8.0"
pycoingecko="2.2.0"
pycparser="2.21"
pydyf="0.2.0"
Pygments="2.12.0"
pyparsing="3.0.9"
PyPDF2="2.2.1"
pyphen="0.12.0"
pytest="7.1.2"
python-docx="0.8.11"
python-magic="0.4.27"
pytz="2022.1"
PyYAML="5.4.1"
render50="8.0.2"
requests="2.28.0"
rsa="4.7.2"
s3cmd="2.2.0"
s3transfer="0.6.0"
six="1.16.0"
sortedcontainers="2.4.0"
soupsieve="2.3.2.post1"
SQLAlchemy="1.4.37"
sqlparse="0.4.2"
tenacity="8.0.1"
termcolor="1.1.0"
tinycss2="1.1.1"
toml="0.10.2"
tomli="2.0.1"
tqdm="4.64.0"
urllib3="1.26.9"
virtualenv="20.15.1"
weasyprint="54.3"
webencodings="0.5.1"
websockets="10.3"
Werkzeug="2.1.2"
yfinance="0.1.72"
zopfli="0.2.1"
python-dotenv = "0.19.2"
flask-mongoengine = "1.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = {version = "^21.7b0", allow-prereleases = true}

[tool.black]
line-length = 80
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
